<resources>
    <string name="language">FR</string>
    <string name="app_name" translatable="false">Focus &amp; Study</string>
    <string name="title_home">Accueil</string>
    <string name="title_calendar">Calendrier</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Paramètres</string>
    <string name="de_travail_aujourd_hui">De travail aujourd\'hui</string>
    <string name="pomodoro">Découvrir le cycle Pomodoro</string>
    <string name="session">Commencer une nouvelle session</string>
    <string name="semaine">De travail cette semaine</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="wrongMail">Les mails ne sont pas les mêmes</string>
    <string name="wrongPassword">Les mots de passe ne sont pas les mêmes</string>
    <string name="newThemeCreation">Un nouveau thème a été crée</string>
    <string name="ensureInput">Assurez-vous que tous les champs soient remplis !</string>
    <string name="ensureUsername">Le pseudo doit tenir entre 3 et 20 caractères.</string>
    <string name="ensureMail">Les mails ne correspondent pas !</string>
    <string name="ensurePassword">Les mots de passe ne correspondent pas !</string>
    <string name="ensurePasswordLength">Le mot de passe doit être entre 4 et 30 caractères !</string>
    <string name="ensurePasswordRequirements">Le mot de passe doit avoir au moins une majuscule, une minuscule, un chiffre et un caractère spécial.</string>
    <string name="ensureMailRequirements">Insérez un format d\'adresse mail valide !</string>
    <string name="invalidCredentials">Informations d\'identification invalides</string>
    <string name="accountCreatedToast">Vous venez de créer votre compte, vous pouvez désormais vous connecter.</string>
    <string name="what_is_the_pomodoro_cycle">Qu\'est-ce que le cycle Pomodoro ?</string>
    <string name="description1">La technique Pomodoro est une technique de gestion du temps qui se base sur l\'usage d\'un minuteur permettant de respecter des périodes de 25 minutes. Elle favorise la concentration sur une tâche en la segmentant en courtes périodes permettant ainsi d’atteindre avec satisfaction des résultats concrets rapidement.</string>
    <string name="description2">La méthode a pour principale prétention que des pauses régulières favorisent l\'agilité intellectuelle. Certains bénéfices des temps de repos sur la consolidation de la mémoire peuvent être observés expérimentalement.</string>
    <string name="description3">🌱 Choisis la tâche sur laquelle tu veux travailler.</string>
    <string name="description4">🍀 Travaille sur la première tâche sans interruption jusqu’à la sonnerie du minuteur, soit 25 minutes. Durant cette période, on s\'efforce de ne pas se laisser distraire afin de rester concentré uniquement sur la tâche ciblée.</string>
    <string name="description5">🪴 Prends une pause de cinq minutes après la première période de 25 minutes.</string>
    <string name="description6">🌳 Après la quatrième période de 25 minutes de travail, accorde-toi une pause plus longue, soit de 15 à 30 minutes.</string>
    <string name="description7">🍊 Continue ainsi jusqu’à finir tes tâches.</string>
    <string name="congratulations">Félicitations !</string>
    <string name="congratulations_text">La session de travail est terminée. Vous avez assuré !</string>
    <string name="xp_earned1">+</string>
    <string name="xp_earned2">15</string>
    <string name="xp_earned3">XP</string>
    <string name="end_the_session">Terminer la session</string>
    <string name="relaunch_the_session">Relancer la session</string>
    <string name="finished_session_text1">Vous avez lancé la session pour :</string>
    <string name="finished_session_text2">La tâche est-elle terminée ?</string>
    <string name="finished_session_no">Non, je la finirai plus tard</string>
    <string name="finished_session_yes">Oui</string>
    <string name="register">S\'inscrire</string>
    <string name="new_user">Nouvel utilisateur ?</string>
    <string name="forgot_your_password">Mot de passe oublié ?</string>
    <string name="log_in">Se connecter</string>
    <string name="display">Afficher</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="separation">____________</string>
    <string name="name">Nom</string>
    <string name="registration">Inscription</string>
    <string name="close">Fermer</string>
    <string name="settings">Paramètres</string>
    <string name="terms_of_use">Conditions d\'utilisation</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="turn_off_notifications">Désactiver les notifications</string>
    <string name="turn_off_sound">Désactiver le son</string>
    <string name="block_apps">Bloquer les applications</string>
    <string name="sleep_mode">Activation du mode veille</string>
    <string name="change_language">Changer la langue</string>
    <string-array name="languages">
        <item>FR</item>
        <item>EN</item>
    </string-array>
    <string name="accomplished_badges">Badges accomplis</string>
    <string name="consecutive_days">Jours d\'affilés</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics">Statistiques</string>
    <string name="badges">Badges</string>
    <string name="work_time_this_week">Temps de travail cette semaine</string>
    <string name="title_sounds">Bruits sonores</string>
    <string name="white_noise">Bruit blanc</string>
    <string name="water">Eau</string>
    <string name="rain">Pluie</string>
    <string name="wave">Vagues</string>
    <string name="none">Aucun</string>
    <string name="confirm">Valider</string>
    <string name="confirm_exit_session">Voulez vous vraiment quitter ?\nToute la progression de la session sera perdue.</string>
    <string name="undo">Annuler</string>
    <string name="exit">Quitter</string>
    <string name="cycles">Cycles</string>
    <string name="break_time">Temps de pause</string>
    <string name="change_music">Changer la musique</string>
    <string name="end_break_time">Finir la pause</string>
    <string name="to_do">A faire</string>
    <string name="new_session">Nouvelle session</string>
    <string name="launch_session">Lancer la session</string>
    <string name="back">Retour</string>
    <string name="fr" translatable="false">FR</string>
    <string name="en" translatable="false">EN</string>
    <string name="new_task">Nouvelle Tâche</string>
    <string name="task_type">Type de tâche</string>
    <string name="task_title">Intitulé</string>
    <string name="task_title_edittext"> Intitulé</string>
    <string name="limite_date">Date limite</string>
    <string name="description">Description</string>
    <string name="description_edittext"> Description</string>
    <string name="create_task">Créer la tâche</string>
    <string name="date_select"> jj/mm/aaaa</string>
    <string-array name="types_tache">
        <item>Examen</item>
        <item>Devoir</item>
    </string-array>
    <string name="tasktitle_taskdetail">Examen mobile</string>
    <string name="tasktype_taskdetail"> Type :</string>
    <string name="date">Date</string>
    <string name="nb_session">Nombre de sessions réalisées : </string>
    <string name="task_over">Tâche terminée</string>
    <string name="task_not_over">Tâche non terminée</string>
    <string name="begin_session">Commencer la session</string>
    <string name="edit_task">Modification de tâche</string>
    <string name="edit">Modifier</string>

</resources>