<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/finished_session"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo_vert" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center">

        <EditText
            android:id="@+id/log_in_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/box4"
            android:textColorHint="@color/gray4"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/log_in_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:background="@drawable/box4"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gray4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/log_in_text_display"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignEnd="@id/log_in_edit_text_password"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/display"
                android:textColor="#5DB075" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/box2"
            />

            <TextView
                android:id="@+id/log_in_text_password_forgotten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5DB075"
                android:text="@string/forgot_your_password"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5DB075"
                android:padding="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:text="@string/separation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center|bottom">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5DB075"
                android:layout_marginEnd="5dp"
                android:text="@string/new_user"/>

            <TextView
                android:id="@+id/registration_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5DB075"
                android:textStyle="bold"
                android:clickable="true"
                android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>