<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_up_close"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_gravity="start"/>


    <TextView
        android:id="@+id/sign_up_text_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="50dp"
        android:text="@string/registration"
        android:textColor="#000000"
        android:textSize="28sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center">

        <EditText
            android:id="@+id/sign_up_edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box4"
            android:textColorHint="@color/gray4"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/sign_up_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/box4"
            android:textColorHint="@color/gray4"
            android:padding="10dp"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/box4"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/gray4"
                android:autofillHints="password"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sign_up_text_display"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignEnd="@id/sign_up_edit_text_password"
                android:gravity="center"
                android:textColor="#5DB075"
                android:text="@string/display"/>

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/box2"/>

    </LinearLayout>


</LinearLayout>