<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/box6"
    android:gravity="center">

    <TextView
        android:id="@+id/exitsessiondialog_text_exit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/confirm_exit_session"
        android:fontFamily="@font/montserrat"
        android:textFontWeight="400"
        android:textSize="16dp"
        android:textColor="@color/gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/exitsessiondialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/undo"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:textColor="#4B9460"
            android:layout_margin="5dp"
            android:background="@drawable/box3"/>

        <Button
            android:id="@+id/exitsessiondialog_button_exit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/exit"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@drawable/box2"/>
    </LinearLayout>


</LinearLayout>